--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,12 @@ services:
     ports:
       - "5000:5000"
     networks:
-      - app-net
+      app-net:
+        ipv4_address: 172.28.0.2  # クライアントの固定IP
 
 networks:
   app-net:
     external: true
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
